<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScientificCalActivity">

    <Button
        android:id="@+id/btn3"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="3"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btnMul"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="*"
        app:layout_constraintEnd_toEndOf="@+id/btnMinus"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="+"
        app:layout_constraintStart_toEndOf="@+id/btnPoint"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="-"
        app:layout_constraintEnd_toEndOf="@+id/btnPlus"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btnMul" />

    <Button
        android:id="@+id/btnBrkt"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="( )"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="6"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/btnBrkt"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="2"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="356dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="="
        app:layout_constraintEnd_toEndOf="@+id/btnPlus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn0" />

    <Button
        android:id="@+id/btnPoint"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="."
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btnFactorial"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="x!"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/btnSwitch"
        app:layout_constraintTop_toBottomOf="@+id/btnCos" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="8"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btnFactorial" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSwitch" />

    <Button
        android:id="@+id/btnPi"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="@string/pi"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btnDivide"
        app:layout_constraintStart_toEndOf="@+id/btnSqrt"
        app:layout_constraintTop_toBottomOf="@+id/btnBackspace" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="@string/Divide"
        app:layout_constraintEnd_toEndOf="@+id/btnMul"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btnPi" />

    <Button
        android:id="@+id/btnSqrt"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="@string/sqrt"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/btnFactorial"
        app:layout_constraintTop_toBottomOf="@+id/btnTan" />

    <Button
        android:id="@+id/btnSwitch"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="SWITCH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSin" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="9"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btnSqrt" />

    <Button
        android:id="@+id/btnCos"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="cos"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/btnSin"
        app:layout_constraintTop_toBottomOf="@+id/btnXPowerN" />

    <Button
        android:id="@+id/btnBackspace"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="@string/backspace"
        app:layout_constraintEnd_toEndOf="@+id/btnPi"
        app:layout_constraintStart_toEndOf="@+id/btnTan"
        app:layout_constraintTop_toBottomOf="@+id/btnC" />

    <Button
        android:id="@+id/btnSin"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="sin"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnXPower2" />

    <Button
        android:id="@+id/btnTan"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="tan"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/btnCos"
        app:layout_constraintTop_toBottomOf="@+id/btnLog"
        android:onClick="onClick" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="Input "
        android:inputType="textPersonName"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvResult"
        app:layout_constraintStart_toStartOf="@+id/tvResult"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:hint="Result "
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnC"
        app:layout_constraintStart_toStartOf="@+id/btnXPower2"
        app:layout_constraintTop_toBottomOf="@+id/etInput" />

    <Button
        android:id="@+id/btnXPower2"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:text="x²"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <Button
        android:id="@+id/btnXPowerN"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:onClick="onClick"
        android:text="@string/xpown"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/btnXPower2"
        app:layout_constraintTop_toTopOf="@+id/btnXPower2" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:onClick="onClick"
        android:text="log"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/btnXPowerN"
        app:layout_constraintTop_toTopOf="@+id/btnXPowerN" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:onClick="onClick"
        android:text="@string/C"
        app:layout_constraintEnd_toEndOf="@+id/btnBackspace"
        app:layout_constraintStart_toEndOf="@+id/btnLog"
        app:layout_constraintTop_toTopOf="@+id/btnLog" />

    <Button
        android:id="@+id/btnHistory2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="HISTORY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEqual" />

</androidx.constraintlayout.widget.ConstraintLayout>